gst-libs/gst/gl/gstgldisplay.c
@@ -30,6 +30,14 @@
  * #GstGLDisplay represents a connection to the underlying windowing system. 
  * Elements are required to make use of #GstContext to share and propogate
  * a #GstGLDisplay.
+ *
+ * <note>Certain window systems require a special function to be called to
+ * initialize threading support.  As this GStreamer GL library does not preclude
+ * concurrent access to the windowing system, it is strongly advised that
+ * applications ensure that threading support has been initialized before any
+ * other toolkit/library functionality is accessed.  Failure to do so could
+ * result in sudden application abortion during execution.  The most notably
+ * example of such a function is X11's XInitThreads().</note>
  */
 
 #ifdef HAVE_CONFIG_H
